fix: reolved font-size and spacing issues

--- a/Korber/korber.scss
+++ b/Korber/korber.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,100;0,300;0,400;0,500;0,600;1,100;1,300&display=swap');
-@import '../../css/theme.scss';
+@import '../css/theme.scss';
 $border: 0.1rem solid rgba(0, 0, 0, 0.3);
 $box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 h2 {
@@ -19,12 +19,12 @@ h3 {
 }
 .brand-logo {
   margin-top: 37px;
+  margin-bottom: 20px;
 }
 .row {
   display: flex;
   flex-wrap: wrap;
   gap: 1.5rem;
-  margin-top: 2rem;
 
   form {
     flex: 1 1 42rem;
@@ -46,7 +46,7 @@ h3 {
       select {
         border-bottom: 0.1rem solid rgba(0, 0, 0, 0.3);
         /* border-radius: 0.5rem; */
-        padding: 0.7rem 0.05rem;
+        padding: 0rem 16px;
         font-size: 0.8rem;
         color: #000000;
         text-transform: none;
@@ -61,7 +61,7 @@ h3 {
     textarea {
       border-bottom: 0.1rem solid rgba(0, 0, 0, 0.3);
       /* border-radius: 0.5rem; */
-      padding: 1rem 2.2rem;
+      padding: 12px 16px;
       font-size: 1.6rem;
       color: #000000;
       text-transform: none;
@@ -69,20 +69,14 @@ h3 {
       background: rgba(245, 243, 241, 0.8);
       width: 660px;
       height: 100px;
+      font-size: 14px;
+      line-height: 18px;
+      text-align: left;
     }
     .btn {
       float: right;
       margin-right: 35px;
     }
-  }
-
-  .map {
-    flex: 1 1 42rem;
-    width: 100%;
-    padding: 2rem;
-    border: $border;
-    border-radius: 0.5rem;
-    box-shadow: $box-shadow;
   }
 }
 .contact .row form .inputBox input {
